[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["Najah7"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
isort = "5.13.2"
mypy = "1.8.0"
mypy-extensions = "1.0.0"
ruff = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
